# cratestats.io

./: .gitignore  .tool-versions  Cargo.toml  Makefile  Procfile  app.py  dev-requirements.txt  elm.json  env.sample  netlify.toml  package-lock.json  package.json  pyproject.toml  recursivedeps.py  requirements.txt  server.py  setup.py  webpack.config.js
app/src/: Main.elm  index.js
cratestats/: __main__.py  app.py  queries.py
recursivedeps/: .gitignore  Cargo.toml
recursivedeps/src/: main.rs
src/: CrateDetails.elm  DownloadChart.elm  Main.elm  Ports.elm  index.html  index.js  main.rs
templates/: index.html
testing/: test_api.py  test_api_recent_downloads.py
