[package]
name = "cratestats"
version = "0.1.0"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0-alpha.6"
env_logger = "0.7.1"
log = "0.4.8"
structopt = "0.3.5"
serde = { version = "1.0.103", features = ["derive"] }
