[package]
name = "recursivedeps"
version = "0.1.0"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.4.13"
postgres = "0.15.2"
env_logger = "0.7.1"
log = "0.4.8"
semver = "0.9.0"
